--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Navaneesh N Amin</title>
-    <script type="module" crossorigin src="assets/index.f1ff5b4e.js"></script>
+    <title>Svelte + TS + Vite App</title>
+    <script type="module" crossorigin src="assets/index.bea60f47.js"></script>
     <link rel="modulepreload" href="assets/vendor.1f847b24.js" />
     <link rel="stylesheet" href="assets/index.6abe869e.css" />
   </head>
