--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Svelte + TS + Vite App</title>
-    <script type="module" crossorigin src="assets/index.bea60f47.js"></script>
+    <title>Navaneesh Amin</title>
+    <script type="module" crossorigin src="assets/index.1dd5c881.js"></script>
     <link rel="modulepreload" href="assets/vendor.1f847b24.js" />
-    <link rel="stylesheet" href="assets/index.6abe869e.css" />
+    <link rel="stylesheet" href="assets/index.e741d8c5.css" />
   </head>
   <body>
     <div id="app"></div>
