--- a/index.html
+++ b/index.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" href="favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Navaneesh Amin</title>
-    <script type="module" crossorigin src="assets/index.eb6bafda.js"></script>
-    <link rel="stylesheet" href="assets/index.43729129.css" />
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" href="favicon.ico" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Navaneesh Amin</title>
+  <script type="module" crossorigin src="assets/index.4aa49b8a.js"></script>
+  <link rel="stylesheet" href="assets/index.43729129.css">
   </head>
-  <body>
-    <div id="app"></div>
-  </body>
+
+<body>
+  <div id="app"></div>
+
+</body>
+
 </html>
